--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tab-navi",
+  "name": "Alternative News",
   "version": "0.0.0",
-  "description": "Hello Expo!",
+  "description": "Hello @Bild Nonesense",
   "author": null,
   "main": "main.js",
   "scripts": {
