--- a/ios/alternative-news.xcodeproj/xcshareddata/xcschemes/alternative-news.xcscheme
+++ b/ios/alternative-news.xcodeproj/xcshareddata/xcschemes/alternative-news.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0830"
+   LastUpgradeVersion = "0620"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "NO"
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "AlternativeNews.app"
-               BlueprintName = "AlternativeNews"
-               ReferencedContainer = "container:AlternativeNews.xcodeproj">
+               BuildableName = "alternative-news.app"
+               BlueprintName = "alternative-news"
+               ReferencedContainer = "container:alternative-news.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AlternativeNewsTests.xctest"
-               BlueprintName = "AlternativeNewsTests"
-               ReferencedContainer = "container:AlternativeNews.xcodeproj">
+               BuildableName = "alternative-newsTests.xctest"
+               BlueprintName = "alternative-newsTests"
+               ReferencedContainer = "container:alternative-news.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,9 +61,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "AlternativeNewsTests.xctest"
-               BlueprintName = "AlternativeNewsTests"
-               ReferencedContainer = "container:AlternativeNews.xcodeproj">
+               BuildableName = "alternative-newsTests.xctest"
+               BlueprintName = "alternative-newsTests"
+               ReferencedContainer = "container:alternative-news.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +71,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AlternativeNews.app"
-            BlueprintName = "AlternativeNews"
-            ReferencedContainer = "container:AlternativeNews.xcodeproj">
+            BuildableName = "alternative-news.app"
+            BlueprintName = "alternative-news"
+            ReferencedContainer = "container:alternative-news.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -94,9 +94,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AlternativeNews.app"
-            BlueprintName = "AlternativeNews"
-            ReferencedContainer = "container:AlternativeNews.xcodeproj">
+            BuildableName = "alternative-news.app"
+            BlueprintName = "alternative-news"
+            ReferencedContainer = "container:alternative-news.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +113,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "AlternativeNews.app"
-            BlueprintName = "AlternativeNews"
-            ReferencedContainer = "container:AlternativeNews.xcodeproj">
+            BuildableName = "alternative-news.app"
+            BlueprintName = "alternative-news"
+            ReferencedContainer = "container:alternative-news.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
